--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@rails/webpacker": "3.4",
     "animate.css": "^3.6.1",
     "bootstrap": "3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "npm": "^5.8.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
